@@ -713,7 +713,9 @@ t/data/rendered/actions_annotator.html
 t/data/rendered/actions_engineer.html
 t/data/rendered/actions_loader.html
 t/data/rendered/actions_public.html
+t/data/rendered/images/HS2.png
 t/data/rendered/images/HS3.png
+t/data/rendered/images/MS1.png
 t/data/rendered/images/key.png
 t/data/rendered/instrument.html
 t/data/rendered/instrument/11.html
