@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use t::util;
-use Test::More tests => 17;
+use Test::More tests => 21;
 use Test::Exception;
 
 our $IF = 'npg::model::instrument_format';
@@ -27,7 +27,7 @@ my $util = t::util->new({fixtures => 1});
   is((scalar @{$cifs}), 7, 'unprimed cache cif');
   is((scalar @{$if->current_instrument_formats()}), 7, 'primed cache cif');
   my $name;
-  lives_ok {$if->manufacturer_name},
+  lives_ok { $name = $if->manufacturer_name }
     'no error calling manufacturer_name on an object used in list context';
   is($name, undef, 'manufacturer name is undefined');
 }
@@ -100,6 +100,57 @@ our $INS = q{npg::model::instrument};
     }
   }
   is_deeply( $obtained, $expected_result, q{instruments ordered by name} );
+}
+
+{
+  sub map2names {
+    my $map = shift;
+    foreach my $format (keys %{$map}) {
+      my @names = map {$_->name} @{$map->{$format}};
+      $map->{$format} = \@names;
+    }
+    return $map;
+  };
+
+  my $expected = {
+    'GA-II' => [qw/IL2 IL3 IL4 IL5 IL6 IL7 IL8 IL9 IL10 IL11 IL28 IL29/],
+    'MiSeq' => ['MS1'],
+    'HiSeqX' => ['HX1','HX2'],
+    'HiSeq' => ['HS1','HS2','HS3'],
+    'cBot' => ['cBot1']
+  }; 
+  my $model = npg::model::instrument_format->new({util => $util});
+  my $instruments_by_format =
+    map2names($model->_map_current_instruments_by_format());
+  is_deeply ($instruments_by_format, $expected,
+    'map of all instruments by format');
+
+  $expected = {
+    'GA-II' => [qw/IL9 IL10 IL11 IL29/],
+    'HiSeq' => ['HS1','HS3'],
+    'HiSeqX' => ['HX1']
+  };
+  $model = npg::model::instrument_format->new({util => $util});
+  $instruments_by_format =
+    map2names($model->_map_current_instruments_by_format('Sulston'));
+  is_deeply ($instruments_by_format, $expected,
+    'map of instruments in the Sulston by format');  
+
+  $expected = {
+    'GA-II' => [qw/IL2 IL3 IL4 IL5 IL6 IL7 IL8/],
+    'HiSeqX' => ['HX2'],
+    'MiSeq' => ['MS1']
+  };
+  $model = npg::model::instrument_format->new({util => $util});
+  $instruments_by_format =
+    map2names($model->_map_current_instruments_by_format('Ogilvie'));
+  is_deeply ($instruments_by_format, $expected,
+    'map of instruments in the Ogilvie by format');
+
+  $model = npg::model::instrument_format->new({util => $util});
+  $instruments_by_format =
+    map2names($model->_map_current_instruments_by_format('Unknown'));
+  is_deeply ($instruments_by_format, {}, 'empty map for an unknown lab');
 }
 
 1;
